Add bind to allow keeping ctrl pressed

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,9 @@ bind v split-window -h -c "#{pane_current_path}"
 # And a horizontal split (divide horizontally) using C-z h
 bind h split-window -v -c  "#{pane_current_path}"
 
+# Don't have to take your finger off the control key when using prefix
+bind C-d detach
+
 # For arrow key movement
 bind -n C-Left select-pane -L
 bind -n C-Down select-pane -D
